<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/subtitle"
            android:title="Subtitle">
            <menu>
                <item
                    android:id="@+id/Indonesia"
                    android:title="@string/indonesia"
                    android:icon="@drawable/bendera_indonesia"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/English"
                    android:title="@string/english"
                    android:icon="@drawable/bendera_english"
                    app:showAsAction="never"/>

            </menu>
        </item>
    </group>


</menu>