<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="64dp"
    tools:context=".ui.AccountFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextAppearance.MyApp.account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akun_name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_fullname"
        style="@style/TextAppearance.MyApp.account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akun_fullname"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/TextAppearance.MyApp.account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akun_email"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/TextAppearance.MyApp.account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akun_pass"
        android:textAlignment="center" />

</LinearLayout>