<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dataEdit"
            type="com.example.challenge_chapter5.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        tools:context="com.example.challenge_chapter5.ui.UpdateFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Edit Account" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_edit">


                <com.google.android.material.textfield.TextInputLayout
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUsername"
                        android:textColorHint="@color/white"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/username"
                        android:text="@{dataEdit.username}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:textColorHint="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"
                        android:hint="@string/name"
                        android:text="@{dataEdit.name}" />

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:textSize="12sp"
                    android:hint="@string/email"
                    android:text="@{dataEdit.email}" />

            </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Edit"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>