<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FilmFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name"
                    app:navigationIcon="@drawable/ic_baseline_menu_24"
                    style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                    android:background="@android:color/transparent"
                    android:elevation="0dp" />

            </com.google.android.material.appbar.AppBarLayout>

            <!-- Screen content -->
            <!-- Use app:layout_behavior="@string/appbar_scrolling_view_behavior" to fit below top app bar -->

            <LinearLayout
                android:transitionName="@{@string/film_card_transition(film.id)}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MyApp.Title" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/welcome"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textAppearance="@style/TextAppearance.MyApp.account" />

                    <TextView
                        android:id="@+id/tvUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="8dp"
                        android:text="user"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textAppearance="@style/TextAppearance.MyApp.account" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_post"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/list_film"
                    tools:visibility="visible" />
            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            app:menu="@menu/menu_main"
            app:headerLayout="@layout/header_navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start" />

    </androidx.drawerlayout.widget.DrawerLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>